# Wedl95erPythonTrain

./: .pre-commit-config.yaml  Day1.py  Day18.py  Day2.py  Day23.py  Day29.py  Day3.py  Day30.py  Day32.py  Day33.py  Day34.py  Day35.py  Day36.py  Day37.py  Day38.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  README.md  bestellungen.csv  chat_server.py  day_1.py  day_18.py  day_2.py  day_23.py  day_29.py  day_3.py  day_30.py  day_32.py  day_33.py  day_34.py  day_35.py  day_37.py  day_38.py  day_39.py  day_4.py  day_40.py  day_41.py  (+42 more)
Algorithms/: day_52.py  day_56.py  day_59.py  day_60.py  day_61.py
Basics/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_15.py  day_16.py  day_17.py  day_3.py  day_6.py
Concurrency_And_Performance/: day_90.py
Data_Science/: day_67.py  day_67_uebung.py  day_68_matplotlib.py  day_71_uebung.py  day_72.py  day_73.py  day_74.py  day_75.py  day_75_prom.py  day_91.py  games_march2025_cleaned_201.csv  recycling_daten.csv
Data_Structures/: day_18.py  day_23.py  day_30.py  day_31.py  day_53.py  day_54.py  day_7.py  day_8.py
Design_Patterns/: day_92.py  day_94.py
Exception_Handling/: day_36.py
File_Operations/: day_33.py  day_35.py
Games/: day_82.py
OOP/: day_39.py  day_40.py  day_41.py  day_42.py  day_43.py
Web_And_Automation/: chat_client.py  day_77.py  day_79.py  day_81.py
day_64/: anmeldung.py
day_85-rpg/: README.md  character.py  combat.py  day_85_claude.py  display.py  items.py  main.py  path.py  skills.py
