[project]
name = "PythonlernRepo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "azure-ai-documentintelligence (>=1.0.2,<2.0.0)",
    "azure-ai-ml (>=1.28.1,<2.0.0)",
    "azure-identity (>=1.23.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "drafthorse (>=2025.1.1,<2026.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "imap-tools (>=1.11.1,<2.0.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "msal (>=1.31.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.6"
ruff = "^0.12.4"
pre-commit = "^4.2.0"
pyright = "^1.1.403"
pylint = "^3.3.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-factoryboy = "^2.8.1"
pytest-asyncio = "^1.1.0"

[tool.pylint]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
    "W0707", # raise-missing-from
    "R1710", # inconsistent-return-statements
]
ignore-path="alembic"
max-line-length = 100
init-hook='import sys; sys.path.append(".")'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude manual test scripts
norecursedirs = [".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg"]