[project]
name = "wedl95er-python-train"
version = "0.1.0"
description = "Übungsprojekt für Python (Pandas & Plotly)"
authors = [
    { name = "MWedl95er", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "plotly>=6.0.0,<7.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pylint = "^3.3.7"

[tool.pylint]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
    "W0707", # raise-missing-from
    "R1710", # inconsistent-return-statements
    "E0401", # import-error (weil wir externe Libs wie pandas/plotly nutzen)
]
max-line-length = 100
init-hook='import sys; sys.path.append(".")'
